--- a/deployment/github_server.service
+++ b/deployment/github_server.service
@@ -4,7 +4,7 @@ After=syslog.target
 After=network.target
 
 [Service]
-User=root
+User=githubchecks
 WorkingDirectory=/home/githubchecks/server
 ExecStart=/home/githubchecks/server/deployment/server.sh
 Restart=always
