Updating config template

--- a/config_template.yml
+++ b/config_template.yml
@@ -1,10 +1,13 @@
+debug:
+
+port:
+
 auth_signature:
   password:
 
 github_app:
-  login:
-  installation_id:
-  cert:
+  - login:
+    cert:
 
 redis:
   host:
