--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-#inherit_from: .rubocop_todo.yml
-
 require:
   - rubocop-performance
 
@@ -18,7 +16,7 @@ Metrics/ClassLength:
   Max: 200
 
 Metrics/ModuleLength:
-  Max: 200.
+  Max: 200
 
 # Do not enforce documentation.
 Style/Documentation:
