--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,8 +10,12 @@ name: Ruby
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - 'README.md'
   pull_request:
     branches: [ "master", "develop" ]
+    paths-ignore:
+      - 'README.md'
 
 permissions:
   contents: read
