--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -102,3 +102,9 @@ jobs:
           title: 'Unit tests'
           json-path: tmp/rspec_results.json
         if: always()          
+
+      - name: Save coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: tmp/rspec_results.json
