Checkout Code error in GitHub Checks
Update CI workflow to save coverage report and add new data sources

Signed-off-by: Rodrigo Nardi <rnardi@netdef.org>

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -102,7 +102,7 @@ jobs:
         if: always()
         with:
           name: coverage-report
-          path: tmp/rspec_results.html
+          path: /home/runner/work/netdef-ci-github-app/netdef-ci-github-app/coverage
           if-no-files-found: warn
 
       - name: RSpec Report
